Fixed and improved course queries
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -7,7 +7,7 @@
 
 
 <ion-content padding>
-  <ion-list-header no-margin>Location</ion-list-header>
+  <ion-list-header no-margin>Located at</ion-list-header>
   <ion-item no-lines>
     <span item-start>{{ officeHours.location }}</span>
   </ion-item>
