Profile page input labels readonly feature not working on phone app; switched things up. Reduced class name to fit on queue page

--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{ course.number }} Queue</ion-title>
+    <ion-title>{{ course.number }}</ion-title>
   </ion-navbar>
 </ion-header>
 
