--- a/src/pages/edit-hours/edit-hours.html
+++ b/src/pages/edit-hours/edit-hours.html
@@ -1,3 +1,6 @@
+<!-- This edit hours page utilizes a course that a user is instructing. It utilizes the edit-hours-form component
+and the officeHoursList for a given course. Each individual office hours appointment is represented by a tab. When 
+an office hours appointment is added, it is displayed as the first tab in the list of office hours.   -->
 <ion-header>
   <ion-navbar>
     <ion-title>Edit {{ course.number }}</ion-title>
