--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -1,3 +1,5 @@
+<!-- This EditProfilePage calls the edit-profile-form component and allows a user to edit aspects of their profile
+such as their status as an instructor or student and their preferred name.   -->
 <ion-header>
 
   <ion-navbar>
