--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,8 @@
-<ion-header>
-
+<!-- This loginPage is accessed when a user clicks on Login from the HomePage. This page utilizes the login-form component, 
+which then allows them to type in their username and password and then log in. 
+ -->
+ <ion-header>
+   
   <ion-navbar>
     <ion-title>Login</ion-title>
   </ion-navbar>
