--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,3 +1,7 @@
+<!-- The ProfilePage shows the user's information including their preferred name, profile image, and status as an instructor or student. 
+This also allows the user to edit their profile, taking them to the EditProfilePage. From the ProfilePage, a user can 
+also sign out of their account.  
+ -->
 <ion-header>
 
   <ion-navbar>
