--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -1,4 +1,8 @@
-<ion-header>
+<!-- This SignUpPage is accessed when the user chooses to sign up from the home page. It utilizes the sign-up-form component. 
+The user can then input a username and password to sign up for an account. They can alternatively sign up with their 
+Google Macalester account. 
+ -->
+ <ion-header>
 
   <ion-navbar>
     <ion-title>Sign Up</ion-title>
