--- a/src/pages/student-queue/student-queue.html
+++ b/src/pages/student-queue/student-queue.html
@@ -1,4 +1,7 @@
-<ion-header>
+<!-- This StudentQueuePage displays the studentQueue for a given office hours appointment of a class. If the user is a 
+student, then they are able to check into the queue and view it. If they're an instructor, then they can edit the queue. 
+This page utilizes the queue-for-students and queue-for-instructors components. -->
+ <ion-header>
 
   <ion-navbar>
     <ion-title>{{ course.number }}</ion-title>
