finished up documentation for the pages. currently working on documentation for components

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,3 +1,6 @@
+<!-- The TabsPage is displayed after a user logs in. It allows a user to view the courses that they're attending
+or instructing
+ -->
 <ion-tabs>
   <ion-tab [root]="tab1" [tabsHideOnSubPages]="true" tabIcon="bookmarks"></ion-tab>
   <ion-tab [root]="tab2" [tabsHideOnSubPages]="true" tabIcon="person"></ion-tab>
