--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
-<!-- This is the home page that displays our logo and allows a user to login to their account or sign up. After the 
+<!-- This is the home page that displays our logo and allows a user to login to their account or sign up. After the
 user has already logged in, they will not be seeing this page every time that the app is opened. This page will only
 be displayed if a user signs out or isn't logged in already. We used buttons to push to the LoginPage or the SignUpPage
 depending on if the user already has an account or not. -->
 <ion-header>
   <ion-navbar>
       <ion-title>
-        TraffIonic
+        Kiumi
       </ion-title>
   </ion-navbar>
 </ion-header>
