Finished refactoring. Platform configuration needed
Signed-off-by: Juan David Garrido <juandagarrido@hotmail.com>

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,8 +10,8 @@ depending on if the user already has an account or not. -->
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-img class="logoImage" src="../assets/imgs/homePageLogo.png"></ion-img>
+<ion-content no-padding>
+  <ion-img no-padding class="logoImage" src="assets/imgs/Kiumi_Logo.png"></ion-img>
   <div class="homeButtons">
     <button class="log-in" [navPush]="'LoginPage'">
       Login
