--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,7 +11,7 @@ depending on if the user already has an account or not. -->
 </ion-header>
 
 <ion-content no-padding>
-  <ion-img no-padding class="logoImage" src="assets/imgs/Kiumi_Logo.png"></ion-img>
+  <ion-img class="logoImage" width="300" height="400" src="../assets/imgs/Kiumi_Logo.png"></ion-img>
   <div class="homeButtons">
     <button class="log-in" [navPush]="'LoginPage'">
       Login
