Home Page styling

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,13 @@ depending on if the user already has an account or not. -->
 <ion-header>
   <ion-navbar>
       <ion-title>
-        Kiumi
+        Home
       </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content no-padding>
-  <ion-img class="logoImage" width="300" height="400" src="../assets/imgs/Kiumi_Logo.png"></ion-img>
+  <ion-img class="logoImage" width="300" height="400" src="assets/imgs/Kiumi_Logo_Transparent.png"></ion-img>
   <div class="homeButtons">
     <button class="log-in" [navPush]="'LoginPage'">
       Login
